# diff4s

./: .headache.dirs  COPYING.HEADER  NOTICE.md  README.md  diff4s-dev.opam  diff4s-tests.opam  diff4s.opam  dune-project  headache.sh
lib/diff4s/src/: diff4s.ml  diff4s.mli  dune
lib/diff4s/test/: dune  test__diff4s.ml  test__diff4s.mli
